Fix quality profile list being obscured
ul#movies can cut off the profiles list. This adds padding to help.

--- a/static/css/add_movie.css
+++ b/static/css/add_movie.css
@@ -11,6 +11,7 @@ ul#movies{
     max-height: 0%;
     overflow: hidden;
     transition: 0.6s;
+    padding-bottom: 4em;
 }
 
 ul#movies li{
